--- a/190/index.html
+++ b/190/index.html
@@ -31,11 +31,17 @@
 <section id="outline-container-orgb14e63f" class="outline-2">
 <h2 id="orgb14e63f"><span class="section-number-2">1.</span> 信息</h2>
 <div class="outline-text-2" id="text-1">
-<ul class="org-ul">
-<li>学习委员: 黄军帮</li>
-</ul>
+<p>
+班长: 林俊贤
+</p>
 
+<p>
+学习委员: 黄军帮
+</p>
 
+<p>
+组长:
+</p>
 <table>
 
 
@@ -52,16 +58,17 @@
 
 <col  class="org-right">
 </colgroup>
-<tbody>
+<thead>
 <tr>
-<td class="org-right">1</td>
-<td class="org-right">2</td>
-<td class="org-right">3</td>
-<td class="org-right">4</td>
-<td class="org-right">5</td>
-<td class="org-right">6</td>
+<th scope="col" class="org-right">1</th>
+<th scope="col" class="org-right">2</th>
+<th scope="col" class="org-right">3</th>
+<th scope="col" class="org-right">4</th>
+<th scope="col" class="org-right">5</th>
+<th scope="col" class="org-right">6</th>
 </tr>
-
+</thead>
+<tbody>
 <tr>
 <td class="org-right">吴嘉城</td>
 <td class="org-right">曾宏燊</td>
