--- a/191/index.html
+++ b/191/index.html
@@ -21,7 +21,7 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#org2e56d75">1. 班级信息</a></li>
-<li><a href="#org935d229">2. 测验</a></li>
+<li><a href="#orgd455ce6">2. 测验备忘</a></li>
 <li><a href="#org42a84ad">3. 寒假作业 (2024-01-15)</a></li>
 <li><a href="#org3d7cc04">4. 练习题备忘</a>
 <ul>
@@ -44,14 +44,14 @@
 <section id="outline-container-org2e56d75" class="outline-2">
 <h2 id="org2e56d75"><span class="section-number-2">1.</span> 班级信息</h2>
 <div class="outline-text-2" id="text-1">
-<ul class="org-ul">
-<li>课代表: 曾凯</li>
-</ul>
+<p>
+课代表: 曾凯
+</p>
 </div>
 </section>
 
-<section id="outline-container-org935d229" class="outline-2">
-<h2 id="org935d229"><span class="section-number-2">2.</span> 测验</h2>
+<section id="outline-container-orgd455ce6" class="outline-2">
+<h2 id="orgd455ce6"><span class="section-number-2">2.</span> 测验备忘</h2>
 <div class="outline-text-2" id="text-2">
 <table id="org2b48f37">
 
@@ -540,7 +540,7 @@
 </p>
 
 
-<figure id="org08c1d1d">
+<figure id="org54994c5">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
