--- a/192/index.html
+++ b/192/index.html
@@ -22,15 +22,16 @@
 <ul>
 <li><a href="#org3d1940c">1. 班级信息</a></li>
 <li><a href="#orgf041657">2. 测验结果</a></li>
-<li><a href="#orgfe26f37">3. 寒假作业 (2024-01-16)</a></li>
-<li><a href="#org48328bd">4. 知识点备忘</a>
+<li><a href="#orgd2ae6df">3. 期末成绩 (2024-01-16)</a></li>
+<li><a href="#orgfe26f37">4. 寒假作业 (2024-01-16)</a></li>
+<li><a href="#org48328bd">5. 知识点备忘</a>
 <ul>
-<li><a href="#orgdcd8973">4.1. 将 string 转换为 double 有哪些方式?</a></li>
+<li><a href="#orgdcd8973">5.1. 将 string 转换为 double 有哪些方式?</a></li>
 </ul>
 </li>
-<li><a href="#org7094f27">5. 练习题备忘</a>
+<li><a href="#org7094f27">6. 练习题备忘</a>
 <ul>
-<li><a href="#org881aac6">5.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
+<li><a href="#org881aac6">6.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
 </ul>
 </li>
 </ul>
@@ -429,10 +430,12 @@
 <li>2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方</li>
 </ul>
+</div>
+</section>
 
-<p>
-期末考试成绩 (2024-01-16):
-</p>
+<section id="outline-container-orgd2ae6df" class="outline-2">
+<h2 id="orgd2ae6df"><span class="section-number-2">3.</span> 期末成绩 (2024-01-16)</h2>
+<div class="outline-text-2" id="text-3">
 <table>
 
 
@@ -853,8 +856,8 @@
 
 
 <section id="outline-container-orgfe26f37" class="outline-2">
-<h2 id="orgfe26f37"><span class="section-number-2">3.</span> 寒假作业 (2024-01-16)</h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="orgfe26f37"><span class="section-number-2">4.</span> 寒假作业 (2024-01-16)</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -866,12 +869,12 @@ C/S架构编程，做完第一章所有的上机题:
 </section>
 
 <section id="outline-container-org48328bd" class="outline-2">
-<h2 id="org48328bd"><span class="section-number-2">4.</span> 知识点备忘</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org48328bd"><span class="section-number-2">5.</span> 知识点备忘</h2>
+<div class="outline-text-2" id="text-5">
 </div>
 <div id="outline-container-orgdcd8973" class="outline-3">
-<h3 id="orgdcd8973"><span class="section-number-3">4.1.</span> 将 string 转换为 double 有哪些方式?</h3>
-<div class="outline-text-3" id="text-4-1">
+<h3 id="orgdcd8973"><span class="section-number-3">5.1.</span> 将 string 转换为 double 有哪些方式?</h3>
+<div class="outline-text-3" id="text-5-1">
 <p>
 在 C# 中，转换 string 为 double 的方式主要有三种:
 </p>
@@ -950,12 +953,12 @@ Console.<span style="color: #fabd2f;">WriteLine</span><span style="color: #45858
 </section>
 
 <section id="outline-container-org7094f27" class="outline-2">
-<h2 id="org7094f27"><span class="section-number-2">5.</span> 练习题备忘</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org7094f27"><span class="section-number-2">6.</span> 练习题备忘</h2>
+<div class="outline-text-2" id="text-6">
 </div>
 <div id="outline-container-org881aac6" class="outline-3">
-<h3 id="org881aac6"><span class="section-number-3">5.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
-<div class="outline-text-3" id="text-5-1">
+<h3 id="org881aac6"><span class="section-number-3">6.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
+<div class="outline-text-3" id="text-6-1">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #fb4933;">using</span> <span style="color: #83a598;">System</span>;
 
