--- a/vvv/1-csharp.html
+++ b/vvv/1-csharp.html
@@ -34,7 +34,7 @@
 </p>
 
 
-<figure id="orga392979">
+<figure id="org7e7ed62">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
