best_try_and_best_chance

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <h3>其他链接</h3>
 <ul>
 
+<li><a href="https://dotnet.microsoft.com/zh-cn/learn">https://dotnet.microsoft.com/zh-cn/learn</a></li>
 </ul>
 </div>
 
