best_try_and_best_chance

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="content" class="content">
 <header>
 <h1 class="title">AIT.NET</h1>
-</header><h3 class="title">Happy Happy</h3>
+</header><h2 style="color: red; font-weight: bold; text-shadow: 0 0 1px #ee0000"><img style="width: 98%" src="/asset/dream.png"></h4>
 
 <div id="main">
 
