best_try_and_best_chance

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 #content > .org-ul > li > ul:first-child { margin-top: 1em; }
 }
 @media (min-width: 768px) {
+body { background: white }
 #content { margin-left: auto; margin-right: auto; padding-left: 50px; }
 #postamble { display: none; }
 #main {display: grid; grid-gap: 20px; grid-template-columns: 2fr auto;}
