best_try_and_best_chance

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 #content > .org-ul > li > ul:first-child { margin-top: 1em; }
 }
 @media (min-width: 768px) {
-body { background: white }
+body { background: white; line-height: 1.4; font-family: 宋体; font-size: 30px; font-weight: 600 }
 #content { margin-left: auto; margin-right: auto; padding-left: 50px; }
 #postamble { display: none; }
 #main {display: grid; grid-gap: 20px; grid-template-columns: 2fr auto;}
@@ -27,22 +27,22 @@ body { background: white }
 #main aside { font-size: 1em; }
 #main aside > ol { display: flex; flex-flow: row wrap; width: 368px; box-shadow: 0 0 10px #eee; padding: 20px 0 20px 20px; margin-top: -4em; }
 #main aside > ol > li { margin-bottom: 1em; width: 150px; }
-li, h3 { font-family: 宋体; font-size: 1.8em } a { text-decoration: none; }
+a { text-decoration: none; }
 }
-.title {color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体}
+.title {color: red; font-weight: bolder; font-size: 2em; text-shadow: 0 0 2em darkblue; font-family: serif; }
 </style>
 </head>
 <body>
 <div id="content" class="content">
 <header>
 <h1 class="title">AIT.NET</h1>
-</header><h2 style="color: red; font-weight: bold; text-shadow: 0 0 1px #ee0000"><img style="width: 98%" src="/asset/dream.png"></h4>
+</header><p><img style="width: auto" src="/asset/dream.png"></p>
 
 <div id="main">
 
 <section id="toc">
 
-<div><br>
+<div>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
 <ul class="org-ul">
 <li><a href="vvv/1-csharp.html">C♯ 语言</a></li>
@@ -50,7 +50,7 @@ li, h3 { font-family: 宋体; font-size: 1.8em } a { text-decoration: none; }
 </ul>
 </div>
 
-<div><br>
+<div style="margin-top: 2em;">
 <h3>其他链接</h3>
 <ul>
 
