best_try_and_best_chance

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 #content > .org-ul > li > ul:first-child { margin-top: 1em; }
 }
 @media (min-width: 768px) {
-body { background: white; line-height: 1.4; } body, h2, h3, p { font-family: 宋体; font-size: 30px; font-weight: 600; line-height: 1.4 }
+body { background: white; } body, h2, h3, p { font-family: 宋体; font-size: 32px; line-height: 1.4 } li { line-height: 1.2 }
 #content { margin-left: auto; margin-right: auto; padding-left: 50px; }
 #postamble { display: none; }
 #main {display: grid; grid-gap: 20px; grid-template-columns: 2fr auto;}
