--- a/191/index.html
+++ b/191/index.html
@@ -22,24 +22,24 @@
 <ul>
 <li><a href="#org6667178">1. 班级信息</a></li>
 <li><a href="#org5c23856">2. 测验结果</a></li>
-<li><a href="#orgc85d629">3. 期末分数 (2024.1.15)</a></li>
-<li><a href="#org86f5b9f">4. 寒假作业 (2024.1.15)</a></li>
-<li><a href="#org31bd20d">5. 练习题备忘</a>
+<li><a href="#org86f5b9f">3. 寒假作业 (2024.1.15)</a></li>
+<li><a href="#org31bd20d">4. 练习题备忘</a>
 <ul>
-<li><a href="#org00a7649">5.1. 循环和条件判断</a>
+<li><a href="#org00a7649">4.1. 循环和条件判断</a>
 <ul>
-<li><a href="#orgc847d55">5.1.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#org26699e9">5.1.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#org55cf224">5.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#orgc8b5722">5.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#org5217738">5.1.5. 在控制台上，输出 99 乘法表</a></li>
+<li><a href="#orgc847d55">4.1.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#org26699e9">4.1.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#org55cf224">4.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#orgc8b5722">4.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+<li><a href="#org5217738">4.1.5. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org8002469">6. Logbook</a>
+<li><a href="#org8002469">5. Logbook</a>
 <ul>
-<li><a href="#org55e7c0e">6.1. 2024-03-08 08:40:26</a></li>
+<li><a href="#org55e7c0e">5.1. 2024-03-08 08:40:26</a></li>
+<li><a href="#orgfd5c359">5.2. 2024-01-15 期末分数</a></li>
 </ul>
 </li>
 </ul>
@@ -288,9 +288,158 @@
 </div>
 </section>
 
-<section id="outline-container-orgc85d629" class="outline-2">
-<h2 id="orgc85d629"><span class="section-number-2">3.</span> 期末分数 (2024.1.15)</h2>
+<section id="outline-container-org86f5b9f" class="outline-2">
+<h2 id="org86f5b9f"><span class="section-number-2">3.</span> 寒假作业 (2024.1.15)</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+完成下面图示的题目:
+</p>
+
+
+<figure id="org1a0b4d3">
+<img src="img/191-3338282.png" alt="191-3338282.png">
+
+</figure>
+
+<p>
+补充:
+</p>
+<ul class="org-ul">
+<li>其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试</li>
+<li>请大家酌情预习 Winform 相关内容</li>
+</ul>
+</div>
+</section>
+
+<section id="outline-container-org31bd20d" class="outline-2">
+<h2 id="org31bd20d"><span class="section-number-2">4.</span> 练习题备忘</h2>
+<div class="outline-text-2" id="text-4">
+</div>
+<div id="outline-container-org00a7649" class="outline-3">
+<h3 id="org00a7649"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
+<div class="outline-text-3" id="text-4-1">
+</div>
+<div id="outline-container-orgc847d55" class="outline-4">
+<h4 id="orgc847d55"><span class="section-number-4">4.1.1.</span> 打印从 1 到 1000 的所有数</h4>
+<div class="outline-text-4" id="text-4-1-1">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
+<span class="linenr">2: </span><span style="color: #000000;">{</span>
+<span class="linenr">3: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span>i<span style="color: #a8007f;">)</span>;
+<span class="linenr">4: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-org26699e9" class="outline-4">
+<h4 id="org26699e9"><span class="section-number-4">4.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
+<div class="outline-text-4" id="text-4-1-2">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
+<span class="linenr">2: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
+<span class="linenr">3: </span><span style="color: #000000;">{</span>
+<span class="linenr">4: </span>    sum = sum + i;
+<span class="linenr">5: </span><span style="color: #000000;">}</span>
+<span class="linenr">6: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}"</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-org55cf224" class="outline-4">
+<h4 id="org55cf224"><span class="section-number-4">4.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
+<div class="outline-text-4" id="text-4-1-3">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
+<span class="linenr"> 2: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = 1000;
+<span class="linenr"> 3: </span>
+<span class="linenr"> 4: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
+<span class="linenr"> 5: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 6: </span>    sum = sum + i;
+<span class="linenr"> 7: </span><span style="color: #000000;">}</span>
+<span class="linenr"> 8: </span>
+<span class="linenr"> 9: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = sum / <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span>n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
+<span class="linenr">10: </span>
+<span class="linenr">11: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-orgc8b5722" class="outline-4">
+<h4 id="orgc8b5722"><span class="section-number-4">4.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
+<div class="outline-text-4" id="text-4-1-4">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">numbers</span> = <span style="color: #000000;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #000000;">}</span>;
+<span class="linenr"> 2: </span>
+<span class="linenr"> 3: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
+<span class="linenr"> 4: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = numbers.Length;
+<span class="linenr"> 5: </span>
+<span class="linenr"> 6: </span><span style="color: #5317ac;">foreach</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> <span style="color: #5317ac;">in</span> numbers<span style="color: #000000;">)</span>
+<span class="linenr"> 7: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 8: </span>    sum = sum + i;
+<span class="linenr"> 9: </span><span style="color: #000000;">}</span>
+<span class="linenr">10: </span>
+<span class="linenr">11: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span> sum / n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
+<span class="linenr">12: </span>
+<span class="linenr">13: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-org5217738" class="outline-4">
+<h4 id="org5217738"><span class="section-number-4">4.1.5.</span> 在控制台上，输出 99 乘法表</h4>
+<div class="outline-text-4" id="text-4-1-5">
+</div>
+</div>
+</div>
+</section>
+<section id="outline-container-org8002469" class="outline-2">
+<h2 id="org8002469"><span class="section-number-2">5.</span> Logbook</h2>
+<div class="outline-text-2" id="text-5">
+</div>
+<div id="outline-container-org55e7c0e" class="outline-3">
+<h3 id="org55e7c0e"><span class="section-number-3">5.1.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-5-1">
+<p>
+要干啥:
+</p>
+<ol class="org-ol">
+<li>课代表同学，请用手机，将班群里的那两个文件下载下来</li>
+<li>课代表同学，请将下载的文件，复制给所有同学</li>
+<li>请所有同学，练习上述代码，理解面向对象的概念，熟悉面向对象代码的写法</li>
+<li>补充: 
+<ul class="org-ul">
+<li>有问题，请及时提问</li>
+<li>请做好笔记，请准备好U盘</li>
+<li>记住网址 <a href="https://freelazy.github.io/191">https://freelazy.github.io/191</a></li>
+<li>根据上述网址上的记录，对以前学习的代码: 练!练!!练!!!</li>
+</ul></li>
+</ol>
+</div>
+</div>
+
+<div id="outline-container-orgfd5c359" class="outline-3">
+<h3 id="orgfd5c359"><span class="section-number-3">5.2.</span> 2024-01-15 期末分数</h3>
+<div class="outline-text-3" id="text-5-2">
 <table>
 
 
@@ -535,157 +684,6 @@
 </tr>
 </tbody>
 </table>
-</div>
-</section>
-
-
-
-<section id="outline-container-org86f5b9f" class="outline-2">
-<h2 id="org86f5b9f"><span class="section-number-2">4.</span> 寒假作业 (2024.1.15)</h2>
-<div class="outline-text-2" id="text-4">
-<p>
-完成下面图示的题目:
-</p>
-
-
-<figure id="orgb545715">
-<img src="img/191-3338282.png" alt="191-3338282.png">
-
-</figure>
-
-<p>
-补充:
-</p>
-<ul class="org-ul">
-<li>其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试</li>
-<li>请大家酌情预习 Winform 相关内容</li>
-</ul>
-</div>
-</section>
-
-<section id="outline-container-org31bd20d" class="outline-2">
-<h2 id="org31bd20d"><span class="section-number-2">5.</span> 练习题备忘</h2>
-<div class="outline-text-2" id="text-5">
-</div>
-<div id="outline-container-org00a7649" class="outline-3">
-<h3 id="org00a7649"><span class="section-number-3">5.1.</span> 循环和条件判断</h3>
-<div class="outline-text-3" id="text-5-1">
-</div>
-<div id="outline-container-orgc847d55" class="outline-4">
-<h4 id="orgc847d55"><span class="section-number-4">5.1.1.</span> 打印从 1 到 1000 的所有数</h4>
-<div class="outline-text-4" id="text-5-1-1">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
-<span class="linenr">2: </span><span style="color: #000000;">{</span>
-<span class="linenr">3: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span>i<span style="color: #a8007f;">)</span>;
-<span class="linenr">4: </span><span style="color: #000000;">}</span>
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-org26699e9" class="outline-4">
-<h4 id="org26699e9"><span class="section-number-4">5.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
-<div class="outline-text-4" id="text-5-1-2">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
-<span class="linenr">2: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
-<span class="linenr">3: </span><span style="color: #000000;">{</span>
-<span class="linenr">4: </span>    sum = sum + i;
-<span class="linenr">5: </span><span style="color: #000000;">}</span>
-<span class="linenr">6: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}"</span><span style="color: #000000;">)</span>;
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-org55cf224" class="outline-4">
-<h4 id="org55cf224"><span class="section-number-4">5.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
-<div class="outline-text-4" id="text-5-1-3">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
-<span class="linenr"> 2: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = 1000;
-<span class="linenr"> 3: </span>
-<span class="linenr"> 4: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
-<span class="linenr"> 5: </span><span style="color: #000000;">{</span>
-<span class="linenr"> 6: </span>    sum = sum + i;
-<span class="linenr"> 7: </span><span style="color: #000000;">}</span>
-<span class="linenr"> 8: </span>
-<span class="linenr"> 9: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = sum / <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span>n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
-<span class="linenr">10: </span>
-<span class="linenr">11: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-orgc8b5722" class="outline-4">
-<h4 id="orgc8b5722"><span class="section-number-4">5.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
-<div class="outline-text-4" id="text-5-1-4">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">numbers</span> = <span style="color: #000000;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #000000;">}</span>;
-<span class="linenr"> 2: </span>
-<span class="linenr"> 3: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
-<span class="linenr"> 4: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = numbers.Length;
-<span class="linenr"> 5: </span>
-<span class="linenr"> 6: </span><span style="color: #5317ac;">foreach</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> <span style="color: #5317ac;">in</span> numbers<span style="color: #000000;">)</span>
-<span class="linenr"> 7: </span><span style="color: #000000;">{</span>
-<span class="linenr"> 8: </span>    sum = sum + i;
-<span class="linenr"> 9: </span><span style="color: #000000;">}</span>
-<span class="linenr">10: </span>
-<span class="linenr">11: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span> sum / n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
-<span class="linenr">12: </span>
-<span class="linenr">13: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-org5217738" class="outline-4">
-<h4 id="org5217738"><span class="section-number-4">5.1.5.</span> 在控制台上，输出 99 乘法表</h4>
-<div class="outline-text-4" id="text-5-1-5">
-</div>
-</div>
-</div>
-</section>
-<section id="outline-container-org8002469" class="outline-2">
-<h2 id="org8002469"><span class="section-number-2">6.</span> Logbook</h2>
-<div class="outline-text-2" id="text-6">
-</div>
-<div id="outline-container-org55e7c0e" class="outline-3">
-<h3 id="org55e7c0e"><span class="section-number-3">6.1.</span> 2024-03-08 08:40:26</h3>
-<div class="outline-text-3" id="text-6-1">
-<p>
-要干啥:
-</p>
-<ol class="org-ol">
-<li>课代表同学，请用手机，将班群里的那两个文件下载下来</li>
-<li>课代表同学，请将下载的文件，复制给所有同学</li>
-<li>请所有同学，练习上述代码，理解面向对象的概念，熟悉面向对象代码的写法</li>
-<li>补充: 
-<ul class="org-ul">
-<li>有问题，请及时提问</li>
-<li>请做好笔记，请准备好U盘</li>
-<li>记住网址 <a href="https://freelazy.github.io/191">https://freelazy.github.io/191</a></li>
-<li>根据上述网址上的记录，对以前学习的代码: 练!练!!练!!!</li>
-</ul></li>
-</ol>
 </div>
 </div>
 </section>
