best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -22,24 +22,24 @@
 <ul>
 <li><a href="#org6667178">1. 班级信息</a></li>
 <li><a href="#org5c23856">2. 测验结果</a></li>
-<li><a href="#org86f5b9f">3. 寒假作业 (2024.1.15)</a></li>
-<li><a href="#org31bd20d">4. 练习题备忘</a>
+<li><a href="#org31bd20d">3. 练习题备忘</a>
 <ul>
-<li><a href="#org00a7649">4.1. 循环和条件判断</a>
+<li><a href="#org00a7649">3.1. 循环和条件判断</a>
 <ul>
-<li><a href="#orgc847d55">4.1.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#org26699e9">4.1.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#org55cf224">4.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#orgc8b5722">4.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#org5217738">4.1.5. 在控制台上，输出 99 乘法表</a></li>
+<li><a href="#orgc847d55">3.1.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#org26699e9">3.1.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#org55cf224">3.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#orgc8b5722">3.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+<li><a href="#org5217738">3.1.5. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org8002469">5. Logbook</a>
+<li><a href="#org8002469">4. Logbook</a>
 <ul>
-<li><a href="#org55e7c0e">5.1. 2024-03-08 08:40:26</a></li>
-<li><a href="#orgfd5c359">5.2. 2024-01-15 期末分数</a></li>
+<li><a href="#org55e7c0e">4.1. 2024-03-08 08:40:26</a></li>
+<li><a href="#orgfb29594">4.2. 2024-01-15 寒假作业</a></li>
+<li><a href="#orgfd5c359">4.3. 2024-01-15 期末分数</a></li>
 </ul>
 </li>
 </ul>
@@ -288,40 +288,17 @@
 </div>
 </section>
 
-<section id="outline-container-org86f5b9f" class="outline-2">
-<h2 id="org86f5b9f"><span class="section-number-2">3.</span> 寒假作业 (2024.1.15)</h2>
-<div class="outline-text-2" id="text-3">
-<p>
-完成下面图示的题目:
-</p>
-
-
-<figure id="org1a0b4d3">
-<img src="img/191-3338282.png" alt="191-3338282.png">
-
-</figure>
-
-<p>
-补充:
-</p>
-<ul class="org-ul">
-<li>其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试</li>
-<li>请大家酌情预习 Winform 相关内容</li>
-</ul>
-</div>
-</section>
-
 <section id="outline-container-org31bd20d" class="outline-2">
-<h2 id="org31bd20d"><span class="section-number-2">4.</span> 练习题备忘</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org31bd20d"><span class="section-number-2">3.</span> 练习题备忘</h2>
+<div class="outline-text-2" id="text-3">
 </div>
 <div id="outline-container-org00a7649" class="outline-3">
-<h3 id="org00a7649"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
-<div class="outline-text-3" id="text-4-1">
+<h3 id="org00a7649"><span class="section-number-3">3.1.</span> 循环和条件判断</h3>
+<div class="outline-text-3" id="text-3-1">
 </div>
 <div id="outline-container-orgc847d55" class="outline-4">
-<h4 id="orgc847d55"><span class="section-number-4">4.1.1.</span> 打印从 1 到 1000 的所有数</h4>
-<div class="outline-text-4" id="text-4-1-1">
+<h4 id="orgc847d55"><span class="section-number-4">3.1.1.</span> 打印从 1 到 1000 的所有数</h4>
+<div class="outline-text-4" id="text-3-1-1">
 <details><summary>参考答案</summary>
 
 <div class="org-src-container">
@@ -337,8 +314,8 @@
 </div>
 
 <div id="outline-container-org26699e9" class="outline-4">
-<h4 id="org26699e9"><span class="section-number-4">4.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
-<div class="outline-text-4" id="text-4-1-2">
+<h4 id="org26699e9"><span class="section-number-4">3.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
+<div class="outline-text-4" id="text-3-1-2">
 <details><summary>参考答案</summary>
 
 <div class="org-src-container">
@@ -356,8 +333,8 @@
 </div>
 
 <div id="outline-container-org55cf224" class="outline-4">
-<h4 id="org55cf224"><span class="section-number-4">4.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
-<div class="outline-text-4" id="text-4-1-3">
+<h4 id="org55cf224"><span class="section-number-4">3.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
+<div class="outline-text-4" id="text-3-1-3">
 <details><summary>参考答案</summary>
 
 <div class="org-src-container">
@@ -380,8 +357,8 @@
 </div>
 
 <div id="outline-container-orgc8b5722" class="outline-4">
-<h4 id="orgc8b5722"><span class="section-number-4">4.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
-<div class="outline-text-4" id="text-4-1-4">
+<h4 id="orgc8b5722"><span class="section-number-4">3.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
+<div class="outline-text-4" id="text-3-1-4">
 <details><summary>参考答案</summary>
 
 <div class="org-src-container">
@@ -406,19 +383,19 @@
 </div>
 
 <div id="outline-container-org5217738" class="outline-4">
-<h4 id="org5217738"><span class="section-number-4">4.1.5.</span> 在控制台上，输出 99 乘法表</h4>
-<div class="outline-text-4" id="text-4-1-5">
+<h4 id="org5217738"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
+<div class="outline-text-4" id="text-3-1-5">
 </div>
 </div>
 </div>
 </section>
 <section id="outline-container-org8002469" class="outline-2">
-<h2 id="org8002469"><span class="section-number-2">5.</span> Logbook</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org8002469"><span class="section-number-2">4.</span> Logbook</h2>
+<div class="outline-text-2" id="text-4">
 </div>
 <div id="outline-container-org55e7c0e" class="outline-3">
-<h3 id="org55e7c0e"><span class="section-number-3">5.1.</span> 2024-03-08 08:40:26</h3>
-<div class="outline-text-3" id="text-5-1">
+<h3 id="org55e7c0e"><span class="section-number-3">4.1.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-4-1">
 <p>
 要干啥:
 </p>
@@ -437,9 +414,32 @@
 </div>
 </div>
 
+<div id="outline-container-orgfb29594" class="outline-3">
+<h3 id="orgfb29594"><span class="section-number-3">4.2.</span> 2024-01-15 寒假作业</h3>
+<div class="outline-text-3" id="text-4-2">
+<p>
+完成下面图示的题目:
+</p>
+
+
+<figure id="org43be17d">
+<img src="img/191-3338282.png" alt="191-3338282.png">
+
+</figure>
+
+<p>
+补充:
+</p>
+<ul class="org-ul">
+<li>其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试</li>
+<li>请大家酌情预习 Winform 相关内容</li>
+</ul>
+</div>
+</div>
+
 <div id="outline-container-orgfd5c359" class="outline-3">
-<h3 id="orgfd5c359"><span class="section-number-3">5.2.</span> 2024-01-15 期末分数</h3>
-<div class="outline-text-3" id="text-5-2">
+<h3 id="orgfd5c359"><span class="section-number-3">4.3.</span> 2024-01-15 期末分数</h3>
+<div class="outline-text-3" id="text-4-3">
 <table>
 
 
