best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -389,6 +389,8 @@
 </div>
 </div>
 </section>
+
+
 <section id="outline-container-org8002469" class="outline-2">
 <h2 id="org8002469"><span class="section-number-2">4.</span> Logbook</h2>
 <div class="outline-text-2" id="text-4">
@@ -422,7 +424,7 @@
 </p>
 
 
-<figure id="org43be17d">
+<figure id="orgb323295">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
