best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -384,12 +384,14 @@
 
 <div id="outline-container-org5217738" class="outline-4">
 <h4 id="org5217738"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
-<div class="outline-text-4" id="text-3-1-5">
+<details><summary>参考答案</summary><div class="outline-text-4" id="text-3-1-5">
+<p>
+TODO
+</p>
 </div>
-</div>
+</details></div>
 </div>
 </section>
-
 
 <section id="outline-container-org8002469" class="outline-2">
 <h2 id="org8002469"><span class="section-number-2">4.</span> Logbook</h2>
@@ -424,7 +426,7 @@
 </p>
 
 
-<figure id="orgb323295">
+<figure id="org0386fd4">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
