--- a/191/index.html
+++ b/191/index.html
@@ -384,12 +384,12 @@
 
 <div id="outline-container-org5217738" class="outline-4">
 <h4 id="org5217738"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
-<details><summary>参考答案</summary><div class="outline-text-4" id="text-3-1-5">
+<div><details><summary>参考答案</summary><div class="outline-text-4" id="text-3-1-5">
 <p>
 TODO
 </p>
 </div>
-</details></div>
+</details></div></div>
 </div>
 </section>
 
@@ -426,7 +426,7 @@ TODO
 </p>
 
 
-<figure id="org0386fd4">
+<figure id="org51c5c35">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
