best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -384,12 +384,7 @@
 
 <div id="outline-container-org5217738" class="outline-4">
 <h4 id="org5217738"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
-<details><summary>参考答案</summary><div class="outline-text-4" id="text-3-1-5">
-<p>
-TODO111
-</p>
 </div>
-</details></div>
 </div>
 </section>
 
@@ -426,7 +421,7 @@ TODO111
 </p>
 
 
-<figure id="orga907f6f">
+<figure id="org2b066b8">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
