best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-08 -->
+<!-- 2024-03-11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>191</title>
@@ -20,26 +20,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org6667178">1. 班级信息</a></li>
-<li><a href="#org5c23856">2. 测验结果</a></li>
-<li><a href="#org31bd20d">3. 练习题备忘</a>
+<li><a href="#org670c8bb">1. 班级信息</a></li>
+<li><a href="#org5193a51">2. 测验结果</a></li>
+<li><a href="#org2e7dc4b">3. 练习题备忘</a>
 <ul>
-<li><a href="#org00a7649">3.1. 循环和条件判断</a>
+<li><a href="#org001c09e">3.1. 循环和条件判断</a>
 <ul>
-<li><a href="#orgc847d55">3.1.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#org26699e9">3.1.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#org55cf224">3.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#orgc8b5722">3.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#org5217738">3.1.5. 在控制台上，输出 99 乘法表</a></li>
+<li><a href="#org432ea3a">3.1.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#orgc41944b">3.1.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#orgb27b2e3">3.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#org83a9938">3.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+<li><a href="#orgadbd614">3.1.5. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org8002469">4. Logbook</a>
+<li><a href="#org576568c">4. Logbook</a>
 <ul>
-<li><a href="#org55e7c0e">4.1. 2024-03-08 08:40:26</a></li>
-<li><a href="#orgfb29594">4.2. 2024-01-15 寒假作业</a></li>
-<li><a href="#orgfd5c359">4.3. 2024-01-15 期末分数</a></li>
+<li><a href="#org6978b31">4.1. 2024-03-08 08:40:26</a></li>
+<li><a href="#org7937d95">4.2. 2024-01-15 寒假作业</a></li>
+<li><a href="#org980fde7">4.3. 2024-01-15 期末分数</a></li>
 </ul>
 </li>
 </ul>
@@ -47,8 +47,8 @@
 </nav>
 
 
-<section id="outline-container-org6667178" class="outline-2">
-<h2 id="org6667178"><span class="section-number-2">1.</span> 班级信息</h2>
+<section id="outline-container-org670c8bb" class="outline-2">
+<h2 id="org670c8bb"><span class="section-number-2">1.</span> 班级信息</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 课代表: 曾凯
@@ -56,10 +56,10 @@
 </div>
 </section>
 
-<section id="outline-container-org5c23856" class="outline-2">
-<h2 id="org5c23856"><span class="section-number-2">2.</span> 测验结果</h2>
+<section id="outline-container-org5193a51" class="outline-2">
+<h2 id="org5193a51"><span class="section-number-2">2.</span> 测验结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org0c85b7f">
+<table id="org21eae3b">
 
 
 <colgroup>
@@ -288,16 +288,16 @@
 </div>
 </section>
 
-<section id="outline-container-org31bd20d" class="outline-2">
-<h2 id="org31bd20d"><span class="section-number-2">3.</span> 练习题备忘</h2>
+<section id="outline-container-org2e7dc4b" class="outline-2">
+<h2 id="org2e7dc4b"><span class="section-number-2">3.</span> 练习题备忘</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org00a7649" class="outline-3">
-<h3 id="org00a7649"><span class="section-number-3">3.1.</span> 循环和条件判断</h3>
+<div id="outline-container-org001c09e" class="outline-3">
+<h3 id="org001c09e"><span class="section-number-3">3.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
-<div id="outline-container-orgc847d55" class="outline-4">
-<h4 id="orgc847d55"><span class="section-number-4">3.1.1.</span> 打印从 1 到 1000 的所有数</h4>
+<div id="outline-container-org432ea3a" class="outline-4">
+<h4 id="org432ea3a"><span class="section-number-4">3.1.1.</span> 打印从 1 到 1000 的所有数</h4>
 <div class="outline-text-4" id="text-3-1-1">
 <details><summary>参考答案</summary>
 
@@ -313,8 +313,8 @@
 </div>
 </div>
 
-<div id="outline-container-org26699e9" class="outline-4">
-<h4 id="org26699e9"><span class="section-number-4">3.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
+<div id="outline-container-orgc41944b" class="outline-4">
+<h4 id="orgc41944b"><span class="section-number-4">3.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
 <div class="outline-text-4" id="text-3-1-2">
 <details><summary>参考答案</summary>
 
@@ -332,8 +332,8 @@
 </div>
 </div>
 
-<div id="outline-container-org55cf224" class="outline-4">
-<h4 id="org55cf224"><span class="section-number-4">3.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
+<div id="outline-container-orgb27b2e3" class="outline-4">
+<h4 id="orgb27b2e3"><span class="section-number-4">3.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
 <div class="outline-text-4" id="text-3-1-3">
 <details><summary>参考答案</summary>
 
@@ -356,8 +356,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc8b5722" class="outline-4">
-<h4 id="orgc8b5722"><span class="section-number-4">3.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
+<div id="outline-container-org83a9938" class="outline-4">
+<h4 id="org83a9938"><span class="section-number-4">3.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
 <div class="outline-text-4" id="text-3-1-4">
 <details><summary>参考答案</summary>
 
@@ -382,18 +382,18 @@
 </div>
 </div>
 
-<div id="outline-container-org5217738" class="outline-4">
-<h4 id="org5217738"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
+<div id="outline-container-orgadbd614" class="outline-4">
+<h4 id="orgadbd614"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
 </div>
 </div>
 </section>
 
-<section id="outline-container-org8002469" class="outline-2">
-<h2 id="org8002469"><span class="section-number-2">4.</span> Logbook</h2>
+<section id="outline-container-org576568c" class="outline-2">
+<h2 id="org576568c"><span class="section-number-2">4.</span> Logbook</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org55e7c0e" class="outline-3">
-<h3 id="org55e7c0e"><span class="section-number-3">4.1.</span> 2024-03-08 08:40:26</h3>
+<div id="outline-container-org6978b31" class="outline-3">
+<h3 id="org6978b31"><span class="section-number-3">4.1.</span> 2024-03-08 08:40:26</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 要干啥:
@@ -413,15 +413,15 @@
 </div>
 </div>
 
-<div id="outline-container-orgfb29594" class="outline-3">
-<h3 id="orgfb29594"><span class="section-number-3">4.2.</span> 2024-01-15 寒假作业</h3>
+<div id="outline-container-org7937d95" class="outline-3">
+<h3 id="org7937d95"><span class="section-number-3">4.2.</span> 2024-01-15 寒假作业</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="org2b066b8">
+<figure id="org4e94304">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -436,8 +436,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfd5c359" class="outline-3">
-<h3 id="orgfd5c359"><span class="section-number-3">4.3.</span> 2024-01-15 期末分数</h3>
+<div id="outline-container-org980fde7" class="outline-3">
+<h3 id="org980fde7"><span class="section-number-3">4.3.</span> 2024-01-15 期末分数</h3>
 <div class="outline-text-3" id="text-4-3">
 <table>
 
@@ -689,7 +689,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-08</p>
+<p class="date">Created: 2024-03-11</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
