--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-08 -->
+<!-- 2024-03-11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -20,21 +20,21 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org336e833">1. 测验</a></li>
-<li><a href="#orgd2ea087">2. 知识点</a>
+<li><a href="#org273b14d">1. 测验</a></li>
+<li><a href="#org47c88af">2. 知识点</a>
 <ul>
-<li><a href="#orgfcdfd79">2.1. 将 string 转换为 double 有哪些方式?</a></li>
+<li><a href="#org2d01e22">2.1. 将 string 转换为 double 有哪些方式?</a></li>
 </ul>
 </li>
-<li><a href="#orgccc0350">3. 练习题</a>
+<li><a href="#org7ac10f0">3. 练习题</a>
 <ul>
-<li><a href="#org9efd179">3.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
+<li><a href="#org4d18255">3.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
 </ul>
 </li>
-<li><a href="#org17b7a13">4. Logbook</a>
+<li><a href="#org6a51e78">4. Logbook</a>
 <ul>
-<li><a href="#orgd25583f">4.1. 2024-01-16 寒假作业</a></li>
-<li><a href="#org73f3d3b">4.2. 2024-01-16 期末成绩</a></li>
+<li><a href="#orgc1f6322">4.1. 2024-01-16 寒假作业</a></li>
+<li><a href="#orgbdd8de3">4.2. 2024-01-16 期末成绩</a></li>
 </ul>
 </li>
 </ul>
@@ -45,10 +45,10 @@
 <li>课代表: 许焕圣</li>
 </ul>
 
-<section id="outline-container-org336e833" class="outline-2">
-<h2 id="org336e833"><span class="section-number-2">1.</span> 测验</h2>
+<section id="outline-container-org273b14d" class="outline-2">
+<h2 id="org273b14d"><span class="section-number-2">1.</span> 测验</h2>
 <div class="outline-text-2" id="text-1">
-<table id="org87961e6">
+<table id="org53e5988">
 
 
 <colgroup>
@@ -429,12 +429,12 @@
 </div>
 </section>
 
-<section id="outline-container-orgd2ea087" class="outline-2">
-<h2 id="orgd2ea087"><span class="section-number-2">2.</span> 知识点</h2>
+<section id="outline-container-org47c88af" class="outline-2">
+<h2 id="org47c88af"><span class="section-number-2">2.</span> 知识点</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgfcdfd79" class="outline-3">
-<h3 id="orgfcdfd79"><span class="section-number-3">2.1.</span> 将 string 转换为 double 有哪些方式?</h3>
+<div id="outline-container-org2d01e22" class="outline-3">
+<h3 id="org2d01e22"><span class="section-number-3">2.1.</span> 将 string 转换为 double 有哪些方式?</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 在 C# 中，转换 string 为 double 的方式主要有三种:
@@ -513,12 +513,12 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </section>
 
-<section id="outline-container-orgccc0350" class="outline-2">
-<h2 id="orgccc0350"><span class="section-number-2">3.</span> 练习题</h2>
+<section id="outline-container-org7ac10f0" class="outline-2">
+<h2 id="org7ac10f0"><span class="section-number-2">3.</span> 练习题</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org9efd179" class="outline-3">
-<h3 id="org9efd179"><span class="section-number-3">3.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
+<div id="outline-container-org4d18255" class="outline-3">
+<h3 id="org4d18255"><span class="section-number-3">3.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
 <div class="outline-text-3" id="text-3-1">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">using</span> <span style="color: #00538b;">System</span>;
@@ -605,12 +605,12 @@ TODO
 </div>
 </section>
 
-<section id="outline-container-org17b7a13" class="outline-2">
-<h2 id="org17b7a13"><span class="section-number-2">4.</span> Logbook</h2>
+<section id="outline-container-org6a51e78" class="outline-2">
+<h2 id="org6a51e78"><span class="section-number-2">4.</span> Logbook</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgd25583f" class="outline-3">
-<h3 id="orgd25583f"><span class="section-number-3">4.1.</span> 2024-01-16 寒假作业</h3>
+<div id="outline-container-orgc1f6322" class="outline-3">
+<h3 id="orgc1f6322"><span class="section-number-3">4.1.</span> 2024-01-16 寒假作业</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 C/S架构编程，做完第一章所有的上机题:
@@ -622,8 +622,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org73f3d3b" class="outline-3">
-<h3 id="org73f3d3b"><span class="section-number-3">4.2.</span> 2024-01-16 期末成绩</h3>
+<div id="outline-container-orgbdd8de3" class="outline-3">
+<h3 id="orgbdd8de3"><span class="section-number-3">4.2.</span> 2024-01-16 期末成绩</h3>
 <div class="outline-text-3" id="text-4-2">
 <table>
 
@@ -1046,7 +1046,7 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-08</p>
+<p class="date">Created: 2024-03-11</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
